--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -2,18 +2,18 @@
 	<div class="footer__container">
 		<div class="footer__contant">
 			<div class="footer__column">
-				<h5>Call me</h5>
-				<a href="tel:+380969980940" class="icon-phone">+38 (096) 99 80 940</a>
-				<a href="tel:+48506697466" class="icon-phone">+48 (50) 66 97 466</a>
+				<h4>Call me</h4>
+				<a href="tel:+380969980940" aria-label="ukrainian number" class="icon-phone">+38 (096) 99 80 940</a>
+				<a href="tel:+48506697466" aria-label="polish number" class="icon-phone">+48 (50) 66 97 466</a>
 			</div>
 			<div class="footer__column">
-				<h5>Text me</h5>
-				<a href="mailto:olih.a@icloud.com" class="icon-envelop">olih.a@icloud.com</a>
+				<h4>Text me</h4>
+				<a href="mailto:olih.a@icloud.com" aria-label="mail" class="icon-envelop">olih.a@icloud.com</a>
 			</div>
 			<div class="footer__column">
-				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github"></a>
-				<a href="https://www.linkedin.com/in/anna-mariia-kyslenko-a98354243/" target="_blank" class="icon-linkedin"></a>
-				<a href="https://www.instagram.com/bilka.11/" target="_blank" class="icon-instagram"></a>
+				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github" aria-label="icon-github"></a>
+				<a href="https://www.linkedin.com/in/anna-mariia-kyslenko-a98354243/" target="_blank" aria-label="linkedin" class="icon-linkedin"></a>
+				<a href="https://www.instagram.com/bilka.11/" target="_blank" class="icon-instagram" aria-label="instagram"></a>
 			</div>
 		</div>
 	</div>
