--- a/src/html/_front_section.htm
+++ b/src/html/_front_section.htm
@@ -6,9 +6,9 @@
 			</h1>
 			<p class="front__text">I'm a beginner in <span>FrontEnd</span> development. I work on creating user interfaces using HTML, CSS, and JavaScript. I'm seeking opportunities to enhance my skills and expand my knowledge in web development.</p>
 			<div class="front__media">
-				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github"></a>
-				<a href="https://www.linkedin.com/in/anna-mariia-kyslenko-a98354243/" target="_blank" class="icon-linkedin"></a>
-				<a href="https://www.instagram.com/bilka.11/" target="_blank" class="icon-instagram"></a>
+				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github" aria-label="github"></a>
+				<a href="https://www.linkedin.com/in/anna-mariia-kyslenko-a98354243/" target="_blank" class="icon-linkedin" aria-label="linkedin"></a>
+				<a href="https://www.instagram.com/bilka.11/" target="_blank" class="icon-instagram" aria-label="instagram"></a>
 			</div>
 		</div>
 		<div class="front__animation">
