--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -3,12 +3,12 @@
 		<div class="footer__contant">
 			<div class="footer__column">
 				<h4>Call me</h4>
-				<a href="tel:+380969980940" aria-label="ukrainian number" class="icon-phone">+38 (096) 99 80 940</a>
-				<a href="tel:+48506697466" aria-label="polish number" class="icon-phone">+48 (50) 66 97 466</a>
+				<a href="tel:+380969980940" aria-label="call to the ukrainian number" class="icon-phone">+38 (096) 99 80 940</a>
+				<a href="tel:+48506697466" aria-label="call to the polish number" class="icon-phone">+48 (50) 66 97 466</a>
 			</div>
 			<div class="footer__column">
 				<h4>Text me</h4>
-				<a href="mailto:olih.a@icloud.com" aria-label="mail" class="icon-envelop">olih.a@icloud.com</a>
+				<a href="mailto:olih.a@icloud.com" aria-label="write to my email" class="icon-envelop">olih.a@icloud.com</a>
 			</div>
 			<div class="footer__column">
 				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github" aria-label="icon-github"></a>
