--- a/src/html/_head.htm
+++ b/src/html/_head.htm
@@ -1,4 +1,4 @@
- <head>
+<head>
 	<title>@@title</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
@@ -6,4 +6,5 @@
 	<link rel="stylesheet" href="css/style.min.css">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Author: A.M. Kyslenko, Category: Home, About me, Projects, Length: 3 pages">
 </head>
