comented about video

--- a/src/about_me.html
+++ b/src/about_me.html
@@ -8,7 +8,7 @@
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
 		<main class="page">
-			@@include('html/_about-video.htm',{})
+			<!-- @@include('html/_about-video.htm',{}) -->
 			@@include('html/_about.htm',{})
 		</main>
 		@@include('html/_footer.htm',{})
