--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -12,7 +12,7 @@
 					<li class="menu__item"><a href="about_me.html" class="menu__link">About me</a></li>
 				</ul>
 			</nav>
-			<div download class="header__download button shiny-btn" id="downloadCV">Download CV <span class="icon-folder-download"></span></div>
+			<div class="header__download button shiny-btn" id="downloadCV">Download CV <span class="icon-folder-download"></span></div>
 			<button type="button" class="header__icon icon-menu"><span></span></button>
 		</div>
 	</div>
