create education page

--- a/src/html/technologies.htm
+++ b/src/html/technologies.htm
@@ -2,7 +2,9 @@
 	<div class="technologies__container">
 		<div class="technologies__contant">
 			<h2 class="technologies__title title">Technologies</h2>
-			<div class="technologies__ranges" id="ranges" data-watch></div>
+			<div class="technologies__ranges" id="ranges" data-watch>
+				<!-- logic in technologies.js -->
+			</div>
 			<h2 class="technologies__title title">Additional technologies and skills</h2>
 			<ul class="technologies__more">
 				<li class="technologies__skill">Git</li>
