--- a/src/projects.html
+++ b/src/projects.html
@@ -10,7 +10,9 @@
 			<div class="projects-page__container">
 				<h1 class="projects-page__title title">Projects</h1>
 				<p>I have been working on various projects to practice and enhance my frontend development skills. These projects include creating responsive and visually appealing websites using HTML, CSS, and JavaScript. I have focused on implementing interactive features, improving user experience, and ensuring compatibility across different devices. Each project has been a valuable learning experience, allowing me to apply and solidify my knowledge in frontend development.</p>
-				<div class="projects-page__contant" id="projectsPage"></div>
+				<div class="projects-page__contant" id="projectsPage">
+					<!-- logic in cards.js -->
+				</div>
 			</div>
 		</main>
 		@@include('html/_footer.htm',{})
