--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -7,12 +7,12 @@
 			</a>
 			<nav class="header__menu menu">
 				<ul class="menu__list">
-					<li class="menu__item"><a href="index.html#tech" class="menu__link">Technologies</a></li>
 					<li class="menu__item"><a href="projects.html" class="menu__link">Projects</a></li>
 					<li class="menu__item"><a href="about_me.html" class="menu__link">About me</a></li>
+					<li class="menu__item"><a href="education.html" class="menu__link">Education</a></li>
 				</ul>
 			</nav>
-			<div class="header__download button shiny-btn" id="downloadCV">Download CV <span class="icon-folder-download"></span></div>
+			<!-- <div class="header__download button shiny-btn" id="downloadCV">Download CV <span class="icon-folder-download"></span></div> -->
 			<button type="button" class="header__icon icon-menu"><span></span></button>
 		</div>
 	</div>
