--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -1,9 +1,8 @@
 <div id="popup" aria-hidden="true" class="popup">
 	<div class="popup__wrapper">
 		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрити</button>
 			<div class="popup__text">
-				Text
+				<!-- logic in education.js -->
 			</div>
 		</div>
 	</div>
