--- a/src/html/_about.htm
+++ b/src/html/_about.htm
@@ -6,12 +6,12 @@
 				<div class="about__line">
 					<span data-da=".about1, 470,first" class="about__year">2018</span>
 					<span data-da=".about2, 470,first" class="about__year">2021</span>
-					<span data-da=".about3, 470,first" class="about__year">2024</span>
+					<span data-da=".about3, 470,first" class="about__year">2025</span>
 				</div>
 				<div class="about__text">
 					<p class="about1">Embarking on my professional journey as a fitness coach, I dedicated myself to helping others achieve their health and wellness goals. Over time, my personal passion for strength training led me to pursue excellence in powerlifting. Proudly, I've attained the title of a master of sport in powerlifting, showcasing my commitment to both personal growth and the pursuit of excellence in physical fitness.</p>
 					<p class="about2">Motivated by a desire for new challenges, I made the decision to shift careers from fitness coaching to studying frontend development. The prospect of creating engaging user interfaces and the dynamic nature of web development captivated me, prompting this exciting transition. I am eager to apply my past experiences and embrace the learning journey ahead.</p>
-					<p class="about3">Currently, I am actively engaged in various projects that showcase my proficiency in frontend development. My focus includes working with technologies such as React, Node.js, Express.js, MongoDB, and implementing REST APIs and GraphQL. Simultaneously, I am dedicated to enhancing my English proficiency, aiming to achieve a B1 level.</p>
+					<p class="about3">Currently, I am actively engaged in various projects that showcase my proficiency in Full Stack development. My focus includes working with technologies such as React, Node.js, Express.js, and implementing REST APIs and GraphQL. Simultaneously, I am dedicated to enhancing my English proficiency, aiming to achieve a B2 level.</p>
 				</div>
 			</div>
 		</div>
