--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -9,6 +9,8 @@
 			<div class="footer__column">
 				<h4>Text me</h4>
 				<a href="mailto:olih.a@icloud.com" aria-label="write to my email" class="icon-envelop">olih.a@icloud.com</a>
+				<h4>Address</h4>
+				<p>Vinnitsa, Ukraine (remote)</p>
 			</div>
 			<div class="footer__column">
 				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github" aria-label="icon-github"></a>
