--- a/src/html/_front_section.htm
+++ b/src/html/_front_section.htm
@@ -2,9 +2,10 @@
 	<div class="front__container">
 		<div class="front__contant">
 			<h1 class="front__title">
-				Hello! My name is Anna-Mariia Kyslenko
+				Hello!<br/> I am Anna-Mariia Kyslenko
 			</h1>
-			<p class="front__text">I'm a beginner in <span>FrontEnd</span> development. I work on creating user interfaces using HTML, CSS, and JavaScript. I'm seeking opportunities to enhance my skills and expand my knowledge in web development.</p>
+			<p class="front__text">Motivated <span>Stack Developer</span>  with solid experience in JavaScript, React, Node.js, and related libraries and frameworks. Currently expanding skills through intensive training at MateAcademy. Known for being reliable, adaptable, and a strong team player with a proven history of building great working relationships with colleagues. Passionate about writing clean, maintainable code and continuously learning new technologies. Looking to contribute to a dynamic development team where both technical and interpersonal skills are valued..
+</p>
 			<div class="front__media">
 				<a href="https://github.com/an-marryKyslenko" target="_blank" class="icon-github" aria-label="github"></a>
 				<a href="https://www.linkedin.com/in/anna-mariia-kyslenko-a98354243/" target="_blank" class="icon-linkedin" aria-label="linkedin"></a>
