--- a/src/html/technologies.htm
+++ b/src/html/technologies.htm
@@ -5,14 +5,13 @@
 			<div class="technologies__ranges" id="ranges" data-watch>
 				<!-- logic in technologies.js -->
 			</div>
-			<h2 class="technologies__title title">Additional technologies and skills</h2>
+			<h2 class="technologies__title title">Additional skills, achievements and hobbies</h2>
 			<ul class="technologies__more">
-				<li class="technologies__skill">Git</li>
-				<li class="technologies__skill">Gulp</li>
+				<li class="technologies__skill">Master of sport in powerlifting</li>
 				<li class="technologies__skill">B1 English</li>
 				<li class="technologies__skill">Quick learning</li>
-				<li class="technologies__skill">Teamwork</li>
-				<li class="technologies__skill">Responsive layout</li>
+				<li class="technologies__skill">Timeworker</li>
+				<li class="technologies__skill">Anime</li>
 			</ul>
 		</div>
 	</div>
